# Backlight

./: .gitattributes  .gitignore  build.gradle.kts  settings.gradle
app/: .gitignore  build.gradle.kts  settings.gradle.kts
app/serialized/: build.gradle.kts
app/src/main/java/: module-info.java
arduino/: .gitignore  platformio.ini
arduino/src/: main.cpp  main.h  state.h
dxgi-capture/: .gitignore  CMakeLists.txt  README.md  build.gradle.kts  dxgi-capture.def  settings.gradle.kts
dxgi-capture/cwrapper/: CMakeLists.txt
dxgi-capture/cwrapper/src/main/cpp/: wrapper.cpp
dxgi-capture/cwrapper/src/main/public/: wrapper.h
dxgi-capture/java/: CMakeLists.txt
dxgi-capture/java/src/main/swig/: Capture.i
dxgi-capture/lib/: CMakeLists.txt
dxgi-capture/lib/src/main/cpp/: capture.cpp  common.cpp  hResultException.cpp  hresultException.cpp  wrapper.cpp
dxgi-capture/lib/src/main/include/: captureMacros.h  captureUtils.h  hResultException.h  hresultException.h
dxgi-capture/lib/src/main/public/: capture.h  common.h  logger.h  wrapper.h
service/: .gitignore  build.gradle.kts  settings.gradle.kts
service/app/: build.gradle.kts
service/app/src/main/java/: module-info.java
service/jni/: build.gradle.kts
service/jni/src/main/java/: module-info.java
service/src/main/java/: module-info.java
src/main/java/: module-info.java
src/main/kotlin/com/github/rossdanderson/backlight/: Array2D.kt  BacklightApplication.kt  COBSEncoder.kt  Color.kt  EventBus.kt  Extensions.kt  FastRGB.kt  IntRange2D.kt  Scratch.kt
(+142 files in other folders)
